website/code/lists-icpp.log
BUILD COMMANDS FOR: lists.icpp

Thu Oct  6 21:55:32 PDT 2005

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  lists.c++ -o lists.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc lists.c++.o -o lists.icpp_run -O3 -ip -static -unroll  
lists.c++(27): error: namespace "std" has no member "iota"
      __gnu_cxx::iota(li1.begin(), li1.end(), 1);
                 ^

compilation aborted for lists.c++ (code 2)
make[2]: [lists.icpp_run] Error 2 (ignored)
rm: cannot remove `lists.c++.o': No such file or directory
rm: cannot remove `lists.o': No such file or directory
make[2]: [lists.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

lists.icpp_run %A
Error, could not exec lists.icpp_run 4 (No such file or directory)
PATH=/opt/shootout/shootout/bench/lists:/opt/shootout/shootout/bench/lists/tmp:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
